--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
@@ -1370,7 +1370,12 @@
                 > div {
                     .displayFlex;
                     .align-items(center);
-                    .justifyContet(flex-start);
+                    .justifyContet(center);
+
+                    @media(max-width: 600px) {
+                        .justifyContet(flex-start);
+                        padding-left: ~"calc(50% - 56px)";
+                    }
                 }
 
                 @media(max-width: 600px) {
@@ -1378,8 +1383,6 @@
                     max-width: 100%;
                     height: 40px;
                     margin: 8px 0;
-                    .justifyContet(flex-start);
-                    padding-left: ~"calc(50% - 56px)";
                 }
 
                 md-icon {
