--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.rtl.css
@@ -1579,8 +1579,15 @@
   display: flex;
   -webkit-align-items: center;
   align-items: center;
-  -webkit-justify-content: flex-start;
-  justify-content: flex-start;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+@media (max-width: 600px) {
+  .share-dialog md-dialog-content .share-options .share-button > div {
+    -webkit-justify-content: flex-start;
+    justify-content: flex-start;
+    padding-right: calc(50% - 56px);
+  }
 }
 @media (max-width: 600px) {
   .share-dialog md-dialog-content .share-options .share-button {
@@ -1588,9 +1595,6 @@
     max-width: 100%;
     height: 40px;
     margin: 8px 0;
-    -webkit-justify-content: flex-start;
-    justify-content: flex-start;
-    padding-right: calc(50% - 56px);
   }
 }
 .share-dialog md-dialog-content .share-options .share-button md-icon {
