--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/quiz.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/quiz.less
@@ -449,6 +449,7 @@
     text-align: center;
     background-size: cover;
     border-radius: 15px;
+    position: relative;
 
     @media (max-width: 600px) {
         padding-top: 35px;
@@ -574,6 +575,69 @@
             background: @backgroundColor2;
             color: @textColorWhite;
         }
+    }
+
+    .like-wrapper {
+        position: absolute;
+        bottom: 10px;
+        left: 0;
+        right: 0;
+        margin: 0 auto;
+        color: @textColorGrey;
+        font-size: 16px;
+
+        @media(max-width: 600px) {
+            font-size: 14px;
+        }
+
+        span {
+            font-weight: bold;
+        }
+
+        md-icon {
+            width: 20px;
+            height: 21px;
+            fill: @textColorGrey;
+            margin-bottom: 2px;
+            margin-right: 5px;
+
+            @media(max-width: 600px) {
+                width: 18px;
+                height: 18px;
+            }
+        }
+
+        .liked {
+            background: @buttonColorBlue;
+            color: @textColorWhite;
+            border-color: @buttonColorBlue;
+
+            md-icon {
+                fill: @textColorWhite;
+            }
+        }
+
+        button {
+            border: 1px solid @textColorGrey;
+            border-radius: 5px;
+            margin-left: 10px;
+            padding: 0 10px;
+
+            @media(max-width: 600px) {
+                padding: 0 6px;
+                margin-left: 4px;
+            }
+
+            > div {
+                margin-top: 2px;
+            }
+        }
+    }
+
+    .like-wrapper, .like-wrapper button > div {
+        .displayFlex;
+        .align-items(center);
+        .justifyContet(center);
     }
 }
 
