--- a/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Index.cshtml
@@ -110,7 +110,7 @@
                     @FlashcardResources.Shuffle&nbsp;@FlashcardResources.Cards
                 </md-switch>
             </div>
-            <div ng-if="f.step==2" class="like-wrapper" ng-hide="f.user.id === f.flashcard.userId">
+            <div ng-if="f.step==2" class="like-wrapper">
                 <span>@FlashcardResources.LikeLabel</span>&nbsp;
                 <button ng-click="f.like()" ng-class="{liked:f.flashcard.like}">
                     <div>
