Redu of the entire user page.

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/user.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/user.less
@@ -141,7 +141,7 @@
         }
     }
 
-    .tab-content {
+    //.tab-content {
         margin: 0 -8px;
         //bottom: 0;
         .custom-progress-bar {
@@ -688,7 +688,7 @@
                 }
             }
         }
-    }
+   // }
 
     md-tab-content {
         background: @backgroundColor;
