--- a/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/_Gamification.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/_Gamification.cshtml
@@ -13,7 +13,7 @@
             </div>
         </div>
         <div class="text">Next Level in {{::gb.data.nextLevel}} pts</div>
-        <md-progress-linear class="custom-progress-bar" ng-cloak md-mode="determinate" value="{{gb.data.score / gb.data.nextLevel * 100}}"></md-progress-linear>
+        <md-progress-linear class="custom-progress-bar" ng-cloak md-mode="determinate" value="{{gb.score}}"></md-progress-linear>
     </div>
     <div class="bottom">
         <div class="level">
