--- a/Zbang.Cloudents.Mvc4WebRole/Views/User/Quizzes.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/User/Quizzes.cshtml
@@ -1,5 +1,7 @@
-﻿<div ng-switch-when="q">
-    <div layout-padding layout="row" layout-wrap layout-align="start center" srph-infinite-scroll="u.myPagingFunction()">
-        <div flex-xs="50" flex-xl="15" flex="20" flex-sm="33" flex-md="33" ng-repeat="e in u.quiz" ng-include="'quiz-template.html'"></div>
+﻿@*<script type="text/ng-template" id="user-quiz.html">*@
+<div @*ng-switch-when="q"*@>
+    <div layout-padding layout="row" layout-wrap layout-align="start center" srph-infinite-scroll="q.loadQuiz()">
+        <div flex-xs="50" flex-xl="15" flex="20" flex-sm="33" flex-md="33" ng-repeat="e in q.quiz" ng-include="'quiz-template.html'"></div>
     </div>
 </div>
+@*</script>*@
