--- a/Zbang.Cloudents.Mvc4WebRole/Views/User/Index2.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/User/Index2.cshtml
@@ -8,18 +8,14 @@
 </div>
 <div class="userPage">
     <div class="profile-sidebar">
-        <div class="portlet light profile-sidebar-portlet" ng-if="!u.isUserProfile">
+        <div class="portlet light profile-sidebar-portlet" ng-if="::!u.isUserProfile">
             <div class="profile-userpic">
                 <user-image ng-if="u.details" class="img-responsive" name="u.details.name" image="u.details.image" width="125" height="125"></user-image>
             </div>
             <div class="profile-usertitle">
-                <h3 class="profile-usertitle-name multi-line-ellipsis limit-two">
-                    {{::u.details.name}}
-                </h3>
-                <h4 class="profile-usertitle-job">
-                    {{::u.details.universityName}}
-                </h4>
-                <button class="message" ng-if="!u.isUserProfile" ng-click="u.sendMessage()" user-not-register-popup="click">
+                <h3 class="profile-usertitle-name multi-line-ellipsis limit-two" ng-bind="::u.details.name"></h3>
+                <h4 class="profile-usertitle-job" ng-bind="::u.details.universityName"></h4>
+                <button class="message" @*ng-if="!u.isUserProfile"*@ ng-click="u.sendMessage()" user-not-register-popup="click">
                     <div class="content">
                         <md-icon md-svg-icon="t:chat"></md-icon>
                         <span>@UserResources.MessageButton</span>
@@ -50,44 +46,58 @@
     </div>
     <div class="profile-content">
         <div class="portlet light">
-            <md-tabs class="page-tabs" md-dynamic-height="true">
-                <md-tab md-on-select="u.changeTab(u.state.badges)" md-active="u.tab === u.state.levels || u.tab === u.state.badges || u.tab === u.state.community">
-                    <md-tab-label><h3>@GamificationResources.Badges</h3> <div class="number">4</div></md-tab-label>
+            <md-tabs class="page-tabs">
+                <md-tab ui-sref="user.badge" md-active="u.isActive('user.badge')">
+                    <md-tab-label>
+                        <h3>@GamificationResources.Badges</h3>
+                        <div class="number">4</div>
+                    </md-tab-label>
                 </md-tab>
-                @*<md-tab md-on-select="u.changeTab(u.state.box)" md-active="u.tab === u.state.box">
-                        <md-tab-label><h3>@GeneralResources.Classes</h3> <div class="number">{{::u.details.numClass | megaNumber}}</div></md-tab-label>
-                    </md-tab>*@
-                <md-tab md-on-select="u.changeTab(u.state.item)" md-active="u.tab === u.state.item">
-                    <md-tab-label><h3>@UserResources.Uploads</h3> <div class="number">{{u.details.numItem | megaNumber}}</div></md-tab-label>
+                <md-tab ui-sref="user.item" md-active="u.isActive('user.item')">
+                    <md-tab-label>
+                        <h3>@UserResources.Uploads</h3>
+                        <div class="number">{{::u.details.numItem | megaNumber}}</div>
+                    </md-tab-label>
                 </md-tab>
-                <md-tab md-on-select="u.changeTab(u.state.post)" md-active="u.tab === u.state.post">
-                    <md-tab-label><h3>@UserResources.Posts</h3> <div class="number">{{::u.details.numFeed | megaNumber}}</div></md-tab-label>
+                <md-tab ui-sref="user.feed" md-active="u.isActive('user.feed')">
+                    <md-tab-label>
+                        <h3>@UserResources.Posts</h3>
+                        <div class="number">{{::u.details.numFeed | megaNumber}}</div>
+                    </md-tab-label>
                 </md-tab>
-                <md-tab md-on-select="u.changeTab(u.state.quiz)" md-active="u.tab === u.state.quiz">
-                    <md-tab-label><h3>@GeneralResources.Quizzes</h3> <div class="number">{{::u.details.numQuiz | megaNumber}}</div></md-tab-label>
+                <md-tab ui-sref="user.quiz" md-active="u.isActive('user.quiz')">
+                    <md-tab-label>
+                        <h3>@GeneralResources.Quizzes</h3>
+                        <div class="number">{{::u.details.numQuiz | megaNumber}}</div>
+                    </md-tab-label>
                 </md-tab>
-                <md-tab md-on-select="u.changeTab(u.state.friend)" md-active="u.tab === u.state.friend">
-                    <md-tab-label><h3>@GeneralResources.Members</h3> <div class="number">{{::u.details.numFriend | megaNumber}}</div></md-tab-label>
+                <md-tab ui-sref="user.classmates" md-active="u.isActive('user.classmates')">
+                    <md-tab-label>
+                        <h3>@GeneralResources.Members</h3>
+                        <div class="number">{{::u.details.numFriend | megaNumber}}</div>
+                    </md-tab-label>
                 </md-tab>
             </md-tabs>
-            <div class="tab-content" ng-switch on="u.tab">
-               @{
-                   Html.RenderPartial("Badges");
-                   Html.RenderPartial("Items");
-                   Html.RenderPartial("Feed");
-                   Html.RenderPartial("Quizzes");
-                   Html.RenderPartial("Members");
-               }
-                @*<div ng-switch-when="b">
-                        <div layout-padding layout="row" layout-wrap layout-align="start center" srph-infinite-scroll="u.myPagingFunction()">
-                            <div class="user-box" flex-xs="100" flex-xl="33" flex="33" flex-sm="50" flex-md="50" ng-repeat="e in u.boxes" ng-include="'box-template.html'"></div>
-                        </div>
-                    </div>*@
-               
-                
-               
-               
-            </div>
+            <div class="page-animation" ui-view></div>
+            @*@{
+
+                    Html.RenderPartial("Items");
+                    Html.RenderPartial("Feed");
+                    Html.RenderPartial("Quizzes");
+                    Html.RenderPartial("Members");
+                }*@
+            @* <div class="tab-content" ng-switch on="u.tab">*@
+
+            @*<div ng-switch-when="b">
+                    <div layout-padding layout="row" layout-wrap layout-align="start center" srph-infinite-scroll="u.myPagingFunction()">
+                        <div class="user-box" flex-xs="100" flex-xl="33" flex="33" flex-sm="50" flex-md="50" ng-repeat="e in u.boxes" ng-include="'box-template.html'"></div>
+                    </div>
+                </div>*@
+
+
+
+
+            @*</div>*@
         </div>
     </div>
 </div>
