--- a/Zbang.Cloudents.Mvc4WebRole/Views/User/Members.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/User/Members.cshtml
@@ -1,6 +1,7 @@
-﻿
-<div ng-switch-when="f">
-    <div layout-padding layout="row" layout-wrap layout-align="start center" srph-infinite-scroll="u.myPagingFunction()">
-        <div flex-xs="100" flex-xl="25" flex="50" flex-sm="100" flex-md="50" ng-repeat="e in u.friends" ng-include="'user-template.html'"></div>
+﻿@*<script type="text/ng-template" id="user-classmates.html">*@
+<div @*ng-switch-when="f"*@>
+    <div layout-padding layout="row" layout-wrap layout-align="start center" srph-infinite-scroll="c.loadFriends()">
+        <div flex-xs="100" flex-xl="25" flex="50" flex-sm="100" flex-md="50" ng-repeat="e in c.friends" ng-include="'user-template.html'"></div>
     </div>
 </div>
+@*</script>*@
