--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.css
@@ -45,6 +45,7 @@ body .itemPage header {
   -o-transition: top 0.2s ease !important;
   -webkit-transition: top 0.2s ease !important;
   transition: top 0.2s ease !important;
+  z-index: 1;
 }
 @media (min-width: 960px) {
   body .itemPage header {
@@ -120,19 +121,6 @@ body .quiz-template .bottom .name {
   font-size: 25px;
   color: #ffffff;
 }
-.multi-line-ellipsis {
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -ms-word-break: break-word;
-  word-break: break-word;
-}
-.multi-line-ellipsis.limit-three {
-  -webkit-line-clamp: 3;
-}
-.multi-line-ellipsis.limit-two {
-  -webkit-line-clamp: 2;
-}
 .circle-loading {
   margin: 0 auto;
 }
@@ -199,143 +187,6 @@ body .quiz-template .bottom .name {
 }
 .suggested .box-style {
   position: relative;
-}
-.box-style {
-  background: #ffffff;
-  box-shadow: 0px 1px 5px 0 rgba(0, 0, 0, 0.34);
-  padding: 10px 10px 25px 10px;
-  display: block;
-  width: 100%;
-  height: 179px;
-  line-height: 1;
-}
-.box-style:not(.leaderboardbox):not(.box-style-form):not(.active):hover {
-  background: #f0f0f0;
-}
-.box-style:not(.leaderboardbox):not(.box-style-form):not(.active):hover .wrapper .icon {
-  fill: #4190b9;
-}
-.box-style:not(.leaderboardbox):not(.box-style-form):not(.active):hover .wrapper span {
-  color: #4190b9;
-}
-.box-style#createCourse {
-  padding-bottom: 16px;
-}
-.box-style#createCourse md-input-container {
-  margin-bottom: 12px;
-}
-.box-style#createCourse .md-errors-spacer {
-  display: none;
-}
-.box-style.action {
-  border-radius: 4px;
-  height: auto;
-  padding: 8px 0;
-}
-.box-style.active {
-  background: #4190b9;
-}
-.box-style.active .wrapper .text {
-  color: #ffffff;
-}
-.box-style.active .wrapper .icon {
-  fill: #ffffff;
-}
-.box-style:not(.active):hover .wrapper .icon {
-  fill: #4190b9 !important;
-}
-.box-style:not(.active):hover .wrapper span {
-  color: #4190b9 !important;
-}
-.box-style .wrapper {
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
-  -webkit-align-items: center;
-  align-items: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-}
-.box-style .wrapper .icon {
-  fill: #4190b9;
-  margin-right: 10px;
-}
-.box-style .wrapper .text {
-  color: #4190b9;
-  font-size: 14px;
-}
-.box-style .wrapper span {
-  line-height: normal;
-  padding-right: 6px;
-}
-.box-style .display .number {
-  float: left;
-  display: inline-block;
-  height: 134px;
-  width: 100%;
-}
-.box-style .display .number .title {
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
-  -webkit-align-items: flex-start;
-  align-items: flex-start;
-  -webkit-justify-content: flex-start;
-  justify-content: flex-start;
-}
-.box-style .display .number .title .icon {
-  width: 60px;
-  height: 60px;
-  line-height: 60px;
-  text-align: center;
-  color: #ffffff;
-  font-size: 28px;
-  flex-shrink: 0;
-  text-transform: capitalize;
-  margin-right: 10px;
-}
-.box-style .display .number h3,
-.box-style .display .number h5 {
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
-  margin: 0 10px 36px 0;
-  padding: 0;
-  font-size: 22px;
-  line-height: 29px;
-  height: 58px;
-  overflow: hidden;
-  -ms-word-wrap: break-word;
-  word-wrap: break-word;
-}
-.box-style .display .number small {
-  font-size: 12px;
-  font-weight: 400;
-  text-transform: uppercase;
-  height: 16px;
-  display: inline-block;
-  max-width: 100%;
-}
-.box-style .progress-info {
-  clear: both;
-  position: relative;
-}
-.box-style .progress-info .progress {
-  margin: 0;
-  height: 1px;
-  clear: both;
-  display: block;
-}
-.box-style .progress-info .status {
-  margin-top: 10px;
-}
-.box-style .progress-info .status .status-title {
-  float: left;
-  display: inline-block;
-}
-.box-style .progress-info .status .status-number {
-  float: right;
-  display: inline-block;
 }
 .box-style-form,
 .box-style-form md-content {
